--- a/branches/wolbach/GCNav/StartCard.xaml
+++ b/branches/wolbach/GCNav/StartCard.xaml
@@ -6,11 +6,23 @@
              mc:Ignorable="d" 
              d:DesignHeight="330" d:DesignWidth="600">
     <Grid>
-        <Grid Name="box" HorizontalAlignment="Left" VerticalAlignment="Top" Height="330" Width="600" Background="#3A1E1A">
-            <TextBlock Name="title" Text="LADS" FontFamily="Segoe" FontWeight="SemiBold" FontSize="88" Foreground="White" TextAlignment="Left"  Margin="20,5,0,0"></TextBlock>
+        <Grid Name="box" HorizontalAlignment="Left" VerticalAlignment="Top" Height="330" Width="600" Background="Black"> <!--Background="#3A1E1A" -->
+            <!-- <TextBlock Name="title" Text="LADS" FontFamily="Segoe" FontWeight="SemiBold" FontSize="88" Foreground="White" TextAlignment="Left"  Margin="20,5,0,0"></TextBlock>
             <TextBlock Name="subtitle" Text="LARGE ARTWORK DISPLAY ON THE SURFACE" FontFamily="Segoe" FontWeight="SemiBold" FontSize="16" Foreground="#CD7F32" TextAlignment="Left"  Margin="25,100,0,0"></TextBlock>
             <TextBlock Name="version" Text="1.1 (7/13/11)" FontFamily="Segoe" Foreground="White" TextAlignment="Left" FontSize="12" Margin="25,125,0,0"></TextBlock>
-            <TextBlock Name="names" Text="Andy van Dam, Donnie Kendall, Jessica Herron, Alex Hills, James Chin, Ferdi Adeputra, Maxwell Ashby, Yuting Chen, Yudi Fu, Julie Mond, Michael Price, Diem Tran, Maggie Pace" FontFamily="Segoe" Foreground="White" TextAlignment="Left" FontSize="16" Margin="25,157,60,0"></TextBlock>
+            <TextBlock Name="names" Text="Andy van Dam, Donnie Kendall, Jessica Herron, Alex Hills, James Chin, Ferdi Adeputra, Maxwell Ashby, Yuting Chen, Yudi Fu, Julie Mond, Michael Price, Diem Tran, Maggie Pace" FontFamily="Segoe" Foreground="White" TextAlignment="Left" FontSize="16" Margin="25,157,60,0"></TextBlock> -->
+
+            <TextBlock Name="title" Text="Library Explorer" FontFamily="Segoe" FontWeight="SemiBold" FontSize="64" Foreground="White" TextAlignment="Left"  Margin="20,5,0,0"></TextBlock>
+            <Canvas Name="HarvardVeritasShield_Canvas" Margin="525,20,25,200">
+                <Image x:Name="image_HarvardVeritasShield"></Image>
+            </Canvas>
+            <TextBlock Name="subtitle" Text="DERIVED FROM LADS FROM BROWN UNIVERSITY" FontFamily="Segoe" FontWeight="SemiBold" FontSize="16" Foreground="Crimson"  TextAlignment="Left"  Margin="25,75,0,0"></TextBlock>
+            <TextBlock Name="version" Text="0.9 (8/3/2011)" FontFamily="Segoe" Foreground="White" TextAlignment="Left" FontSize="12" Margin="25,95,0,0"></TextBlock>
+            <TextBlock Name="names_harvard_header" Text="HARVARD UNIVERSITY" FontFamily="Segoe" Foreground="Crimson" TextAlignment="Left" FontSize="12" Margin="25,120,60,0"></TextBlock>
+            <TextBlock Name="names_harvard" Text="Justin Daoust, Chris Erdmann" FontFamily="Segoe" Foreground="White" TextAlignment="Left" FontSize="16" Margin="25,135,60,0"></TextBlock>
+            <TextBlock Name="names_brown_header" Text="BROWN UNIVERSITY" FontFamily="Segoe" Foreground="Crimson" TextAlignment="Left" FontSize="12" Margin="25,165,60,0"></TextBlock>
+            <TextBlock Name="names_brown" Text="Andy van Dam, Donnie Kendall, Jessica Herron, Alex Hills, James Chin, Ferdi Adeputra, Maxwell Ashby, Yuting Chen, Yudi Fu, Julie Mond, Maggie Pace, Michael Price, Diem Tran" FontFamily="Segoe" Foreground="White" TextAlignment="Left" FontSize="16" Margin="25,180,60,0"></TextBlock>
+
             <Canvas Name="imageHolder" Margin="25,247,25,12.5">
                 <Image x:Name="image"></Image>
             </Canvas>
